css fix, fixed overlaping

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -100,6 +100,7 @@ a{
 
 .select2-container.form-control{
     padding: 0;
+    height: auto;
 }
 
 .musician-box-genres{
@@ -401,4 +402,9 @@ a{
 .flash-message.alert-warning{
     margin-bottom: 10px;
     padding: 10px;
+}
+
+.select2-container-multi .select2-choices {
+    height: 70px !important;
+    overflow: auto;
 }
